# python-xkbcommon

./: .gitignore  .travis.yml  LICENSE  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: run-tests.yml
tests/: data.py  test_xkb.py
xkbcommon/: __init__.py  ffi_build.py  xkb.py
