[metadata]
name = xkbcommon
version = 0.5
description = Bindings for libxkbcommon using cffi
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Stephen Early
author_email = steve@assorted.org.uk
url = https://github.com/sde1000/python-xkbcommon
license = MIT
license_files =
    LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers

[options]
python_requires = >= 3.6
packages =
    xkbcommon
setup_requires =
    cffi >= 1.5.0
install_requires =
    cffi >= 1.5.0

[flake8]
exclude = tests/data.py
max_line_length = 80
